Letter Spacing Fixed

--- a/css/style.css
+++ b/css/style.css
@@ -62,10 +62,12 @@ span {
     color: var(--tertiary);
 }
 h1 {
-    font-size: 47px;
+    font-size: 44px;
+    letter-spacing: 2px;
     margin: 0 0 15px 0;
 }
 h3 {
+    letter-spacing: .5px;
     margin: 5px 0 5px 0;
 }
 p, h3 {
@@ -107,6 +109,7 @@ hr {
     padding: 12px 0 12px 0;
     text-align: center;
     font-size: 19px;
+    letter-spacing: .5px;
     color: var(--primary);
     width: 350px;
     margin: 18px 0 10px 0;
